# toy-payments-engine

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yaml  main.yaml
sample/: transactions.csv
src/: accounts.rs  ledger.rs  main.rs  operations.rs  transactions.rs  tx_parser.rs
src/accounts/: tests.rs
src/ledger/: tests.rs
src/models/: account.rs  transaction.rs
src/operations/: tests.rs
src/transactions/: tests.rs
src/tx_parser/: tests.rs
