[package]
name = "toy-payments-engine"
version = "0.1.0"
authors = ["Andrea Celletti <celletti.andrea87@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = "1.0.136"
serde_derive = "1.0.136"